prevent shining ContextNodes covers header

--- a/dbux-graph-client/src/graph/styles.css
+++ b/dbux-graph-client/src/graph/styles.css
@@ -297,6 +297,7 @@ div {
   position: sticky;
   top: 0;
   width: 100% !important;
+  z-index: 2
 }
 
 .async-thread {
